TM-13084 Fix issue setting minimum column width
Change to use the minimum width which is coming from the endpoint, whenever this value is not arriving use a default minimum width (140)

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-grid/asset-explorer-view-grid.component.html
@@ -153,7 +153,7 @@
 				*ngFor="let column of model.columns; let i = index"
 				[locked]="column.locked"
 				field="{{column.domain}}_{{column.property}}"
-				[minResizableWidth]="VIEW_COLUMN_MIN_WIDTH"
+				[minResizableWidth]="column.width || VIEW_COLUMN_MIN_WIDTH"
 				[width]="column.width"
 				[class]="column.domain"
 		>
