--- a/web-app/tds/web-app/css/page/module/assetExplorer/asset-explorer-view-grid.component.sass
+++ b/web-app/tds/web-app/css/page/module/assetExplorer/asset-explorer-view-grid.component.sass
@@ -75,6 +75,11 @@
   .sortable-column
     width: 90%
 
+  .sortable-column + span.k-icon
+    float: unset
+    position: relative
+    right: 5px
+
   .text-delimited
     white-space: normal
     word-wrap: break-word
