TM-13370 Added property tabindex in lowercase

--- a/web-app/tds/web-app/app-js/shared/components/bulk-change/components/bulk-change-edit/bulk-change-edit.component.html
+++ b/web-app/tds/web-app/app-js/shared/components/bulk-change/components/bulk-change-edit/bulk-change-edit.component.html
@@ -46,7 +46,8 @@
                             <kendo-grid-column title="Field Name" [width]="100">
                                 <ng-template kendoGridCellTemplate let-dataItem let-rowIndex="rowIndex">
                                     <kendo-dropdownlist
-                                            name="field" class="form-control field"
+                                            name="field"
+											class="form-control field"
                                             [data]="availableFields"
                                             [value]="editRows.selectedValues[rowIndex].field"
                                             (valueChange)="onFieldValueChange($event, rowIndex)"
@@ -75,7 +76,7 @@
                                 <ng-template kendoGridCellTemplate let-dataItem let-rowIndex="rowIndex">
                                     <!-- Text Fields -->
                                     <input [(ngModel)]="editRows.selectedValues[rowIndex].value"
-                                           type="text" name="actionValue" class="form-control"
+                                           type="text" name="actionValue{{rowIndex}}" class="form-control"
                                            *ngIf="canShowControl('String', rowIndex)"/>
 
                                     <!-- Number Fields -->
