--- a/web-app/tds/web-app/app-js/modules/user/components/manage-staff/user-manage-staff.component.html
+++ b/web-app/tds/web-app/app-js/modules/user/components/manage-staff/user-manage-staff.component.html
@@ -1,10 +1,11 @@
-<div tds-autofocus tds-handle-escape (escPressed)="cancelCloseDialog()" id="user-manage-staff-component" class="modal-content user-manage-staff-component">
+<div tds-autofocus tds-handle-escape (escPressed)="cancelCloseDialog()" id="user-manage-staff-component" class="user-manage-staff-component modal fade in tds-ui-modal-decorator" data-backdrop="static" tabindex="-1" role="dialog">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content resizable tds-angular-component-content"
              tds-ui-modal-decorator=""
              [options]="modalOptions"
              [style.width.px]="'auto'"
              [style.height]="'auto'">
+
             <div class="modal-header">
                 <button (click)="cancelCloseDialog()" type="button" class="close" aria-label="Close"><span aria-hidden="true">×</span></button>
                 <h4 class="modal-title">Manage Staff</h4>
