--- a/web-app/tds/web-app/app-js/modules/user/components/manage-staff/user-manage-staff.component.html
+++ b/web-app/tds/web-app/app-js/modules/user/components/manage-staff/user-manage-staff.component.html
@@ -3,7 +3,7 @@
         <div class="modal-content resizable tds-angular-component-content"
              tds-ui-modal-decorator=""
              [options]="modalOptions"
-             [style.width.px]="'auto'"
+             [style.width.px]="400"
              [style.height]="'auto'">
 
             <div class="modal-header">
