TM-13475 Update number control component
To work with the new base class TDSCustomControl

--- a/web-app/tds/web-app/app-js/shared/components/bulk-change/components/bulk-change-edit/bulk-change-edit.component.html
+++ b/web-app/tds/web-app/app-js/shared/components/bulk-change/components/bulk-change-edit/bulk-change-edit.component.html
@@ -82,8 +82,8 @@
                                     <tds-number-control *ngIf="canShowControl('Number', rowIndex)"
                                                         [(value)]="editRows.selectedValues[rowIndex].value"
                                                         [format]="editRows.selectedValues[rowIndex].field.constraints?.format"
-                                                        [minRange]="editRows.selectedValues[rowIndex].field.constraints?.minRange"
-                                                        [maxRange]="editRows.selectedValues[rowIndex].field.constraints?.maxRange">
+                                                        [min]="editRows.selectedValues[rowIndex].field.constraints?.minRange"
+                                                        [max]="editRows.selectedValues[rowIndex].field.constraints?.maxRange">
                                     </tds-number-control>
 
                                     <!-- Date Fields -->
