--- a/web-app/tds/web-app/app-js/modules/fieldSettings/components/select-list/selectlist-configuration-popup.component.html
+++ b/web-app/tds/web-app/app-js/modules/fieldSettings/components/select-list/selectlist-configuration-popup.component.html
@@ -1,4 +1,4 @@
-<div class="modal-content selectlist-configuration-popup">
+<div tds-autofocus tds-handle-escape (escPressed)="cancelCloseDialog()" class="modal-content selectlist-configuration-popup">
     <div class="modal-header">
         <button (click)="cancelCloseDialog()" type="button" class="close" aria-label="Close"><span aria-hidden="true">×</span></button>
         <h4 class="modal-title">List Configuration - {{field.field}}</h4>
