TM-13622 Grid list almost done

--- a/web-app/tds/web-app/app-js/modules/credential/components/list/credential-list.component.html
+++ b/web-app/tds/web-app/app-js/modules/credential/components/list/credential-list.component.html
@@ -34,7 +34,7 @@
 								<button class="btn btn-default" (click)="onEdit(dataItem)" *ngIf="isEditAvailable()"><span class="glyphicon glyphicon-pencil"></span></button>
 								<button class="btn btn-default" (click)="onDelete(dataItem)" *ngIf="isDeleteAvailable()"><span class="fa fa-fw fa-trash"></span></button>
 							</div>
-						</ng-template>>
+						</ng-template>
 						<ng-template kendoGridCellTemplate *ngIf="column.type === 'boolean'" let-dataItem>
 							<input type="checkbox" [(ngModel)]="dataItem[column.property]" style="margin-left: 35%;" disabled/>
 						</ng-template>
